@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Platform{
-designation
}

class SpecialistDoctor{
    -doctorIndexNumber
}

class Receptionist{}

class MedicalLabTechnician{}

class ClinicalChemistryTechnologist{}

class LaboratoryCoordinator{}

class Company{
 -designation
}

class Employee {
  -name
  -function
  -phoneNumber
  -email
  -address
  -soc
}

Company "1" -- "*" Employee :  has >
Employee "1" -- "1" SpecialistDoctor : is <
Employee "1" -- "1" Receptionist : is <
Employee "1" -- "1" MedicalLabTechnician : is <
Employee "1" -- "1" ClinicalChemistryTechnologist : is <
Employee "1" -- "1" LaboratoryCoordinator : is <
Employee "1" -- "1" Platform : uses >




@enduml